--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
         <div class="header-top">
             <div class="header-content">
                 <div class="header-title">
-                    <img src="images/photo.jpg" alt="Дёмин Александр Юрьевич" class="header-photo">
+                    <img src="photo.jpg" alt="Дёмин Александр Юрьевич" class="header-photo">
                     <div>
                         <h1>Дёмин Александр Юрьевич</h1>
                         <p class="header-subtitle">Преподаватель-организатор ОБЗР | МБОУ СШ № 2 г. Лысково</p>
@@ -349,7 +349,7 @@
 
         <div class="profile-section">
             <div class="profile-photo-container">
-                <img src="images/photo.jpg" alt="Дёмин Александр Юрьевич" class="profile-photo">
+                <img src="photo.jpg" alt="Дёмин Александр Юрьевич" class="profile-photo">
                 <div class="profile-name">Дёмин Александр Юрьевич</div>
                 <div class="profile-position">Преподаватель-организатор ОБЗР</div>
                 <div>МБОУ СШ № 2 г. Лысково</div>
