--- a/ai-projects.html
+++ b/ai-projects.html
@@ -60,7 +60,7 @@
         <div class="header-top">
             <div class="header-content">
                 <div class="header-title">
-                    <img src="images/photo.jpg" alt="Дёмин Александр Юрьевич" class="header-photo">
+                    <img src="photo.jpg" alt="Дёмин Александр Юрьевич" class="header-photo">
                     <div>
                         <h1>Дёмин Александр Юрьевич</h1>
                         <p class="header-subtitle">Преподаватель-организатор ОБЗР | МБОУ СШ № 2 г. Лысково</p>
