--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@
                     <ul>
                         <li><strong>Должность:</strong> Преподаватель-организатор ОБЗР</li>
                         <li><strong>Педагогический стаж:</strong> 2 года</li>
-                        <li><strong>Квалификационная категория:</strong> Без категории</li>
+                        <li><strong>Квалификационная категория:</strong>Подготовка к аттестации на первую квалификационную категорию</li>
                         <li><strong>Преподаваемый предмет:</strong> ОБЗР, 8-11 классы</li>
                     </ul>
                 </div>
@@ -378,8 +378,8 @@
                 <div>модулей ОБЗР</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">10</div>
-                <div>наград</div>
+                <div class="stat-number">2</div>
+                <div>награды</div>
             </div>
         </div>
 
@@ -389,12 +389,12 @@
 
         <div class="info-card">
             <h2>🎓 Образование</h2>
-            <p><em>Укажите информацию о вашем образовании: вуз, специальность, год окончания</em></p>
+            <p><em>Нижегородская академия МВД России, 2001 год, юрист</em></p>
         </div>
 
         <div class="info-card">
-            <h2>📚 Повышение квалификации</h2>
-            <p><em>Добавьте информацию о курсах повышения квалификации за последние 3-5 лет</em></p>
+            <h2>📚 Переподготовка и повышение квалификации</h2>
+            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ" ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе "Основы безопасности и защиты Родины"</em></p>
         </div>
 
         <div class="info-card">
