--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@
                     <ul>
                         <li><strong>Должность:</strong> Преподаватель-организатор ОБЗР</li>
                         <li><strong>Педагогический стаж:</strong> 2 года</li>
-                        <li><strong>Квалификационная категория:</strong>Подготовка к аттестации на первую квалификационную категорию</li>
+                        <li><strong>Квалификационная категория:</strong> Подготовка к аттестации на первую квалификационную категорию</li>
                         <li><strong>Преподаваемый предмет:</strong> ОБЗР, 8-11 классы</li>
                     </ul>
                 </div>
@@ -394,7 +394,8 @@
 
         <div class="info-card">
             <h2>📚 Переподготовка и повышение квалификации</h2>
-            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ" ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе "Основы безопасности и защиты Родины"</em></p>
+            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ" 
+                ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе "Основы безопасности и защиты Родины"</em></p>
         </div>
 
         <div class="info-card">
