--- a/about.html
+++ b/about.html
@@ -394,7 +394,7 @@
 
         <div class="info-card">
             <h2>📚 Переподготовка и повышение квалификации</h2>
-            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ" 
+            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ"<br> 
                 ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе "Основы безопасности и защиты Родины"</em></p>
         </div>
 
@@ -409,7 +409,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                 </ul>
             </div>
