--- a/about.html
+++ b/about.html
@@ -361,7 +361,8 @@
                     <ul>
                         <li><strong>Должность:</strong> Преподаватель-организатор ОБЗР</li>
                         <li><strong>Педагогический стаж:</strong> 2 года</li>
-                        <li><strong>Квалификационная категория:</strong> Подготовка к аттестации на первую квалификационную категорию</li>
+                        <li><strong>Квалификационная категория:</strong> Подготовка к аттестации <br>
+                            на первую квалификационную категорию</li>
                         <li><strong>Преподаваемый предмет:</strong> ОБЗР, 8-11 классы</li>
                     </ul>
                 </div>
@@ -384,7 +385,8 @@
         </div>
 
         <div class="quote-section">
-            <p class="quote-text">"Безопасность — это не просто знание правил, это образ жизни и ответственность за себя и окружающих"</p>
+            <p class="quote-text">"Безопасность — это не просто знание правил, <br>
+                это образ жизни и ответственность за себя и окружающих"</p>
         </div>
 
         <div class="info-card">
@@ -395,12 +397,19 @@
         <div class="info-card">
             <h2>📚 Переподготовка и повышение квалификации</h2>
             <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ"<br> 
-                ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе "Основы безопасности и защиты Родины"</em></p>
+                ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации <br>
+                по программе "Основы безопасности и защиты Родины"</em></p>
         </div>
 
         <div class="info-card">
             <h2>🏆 Награды и достижения</h2>
-            <p><em>Укажите ваши 10 наград текстом (сканы не нужны по ФЗ-152)</em></p>
+            <p><em>Благодарственное письмо УЦПВ ПФО "Гвардеец", 2023 год<br>
+            "За активное участие в проведении учебных сборов<br>
+            по основам военной службы<br>
+            Почетная грамота Управления образования и молодежной политики<br>
+            администрации Лысковского муниципального округа<br>
+            "За профессионализм, добросовестный труд и<br>
+            умелую организацию образовательного процесса</em></p>
         </div>
     </main>
 
