--- a/about.html
+++ b/about.html
@@ -361,8 +361,7 @@
                     <ul>
                         <li><strong>Должность:</strong> Преподаватель-организатор ОБЗР</li>
                         <li><strong>Педагогический стаж:</strong> 2 года</li>
-                        <li><strong>Квалификационная категория:</strong> Подготовка к аттестации на первую <br>
-                            квалификационную категорию</li>
+                        <li><strong>Квалификационная категория:</strong> Подготовка к аттестации на первую категорию</li>
                         <li><strong>Преподаваемый предмет:</strong> ОБЗР, 8-11 классы</li>
                     </ul>
                 </div>
@@ -396,17 +395,17 @@
 
         <div class="info-card">
             <h2>📚 Переподготовка и повышение квалификации</h2>
-            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ"<br> 
-                ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе <br>
+            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ"</em></p>
+            <p><em>ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе <br>
                 "Основы безопасности и защиты Родины"</em></p>
         </div>
 
         <div class="info-card">
             <h2>🏆 Награды и достижения</h2>
             <p><em>Благодарственное письмо УЦПВ ПФО "Гвардеец", 2023 год<br>
-            "За активное участие в проведении учебных сборов по основам военной службы<br>
-            Почетная грамота Управления образования и молодежной политики администрации Лысковского муниципального округа<br>
-            "За профессионализм, добросовестный труд и умелую организацию образовательного процесса</em></p>
+            "За активное участие в проведении учебных сборов по основам военной службы"</em></p>
+           <p><em>Почетная грамота Управления образования и молодежной политики администрации Лысковского муниципального округа<br>
+            "За профессионализм, добросовестный труд и умелую организацию образовательного процесса"</em></p>
         </div>
     </main>
 
