--- a/about.html
+++ b/about.html
@@ -395,16 +395,16 @@
 
         <div class="info-card">
             <h2>📚 Переподготовка и повышение квалификации</h2>
-            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ"</em></p>
-            <p><em>ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе <br>
+            <p><em>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ"</p>
+            <p>ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе <br>
                 "Основы безопасности и защиты Родины"</em></p>
         </div>
 
         <div class="info-card">
             <h2>🏆 Награды и достижения</h2>
             <p><em>Благодарственное письмо УЦПВ ПФО "Гвардеец", 2023 год<br>
-            "За активное участие в проведении учебных сборов по основам военной службы"</em></p>
-           <p><em>Почетная грамота Управления образования и молодежной политики администрации Лысковского муниципального округа<br>
+            "За активное участие в проведении учебных сборов по основам военной службы"</p>
+            <p>Почетная грамота Управления образования и молодежной политики администрации Лысковского муниципального округа<br>
             "За профессионализм, добросовестный труд и умелую организацию образовательного процесса"</em></p>
         </div>
     </main>
