--- a/about.html
+++ b/about.html
@@ -395,7 +395,8 @@
 
         <div class="info-card">
             <h2>📚 Переподготовка и повышение квалификации</h2>
-            <p>ООО "Импульс", 2023 год, присвоена квалификация "Учитель ОБЖ"</p>
+            <p>ООО "Импульс", 2023 год, профессиональная переподготовка по программе:<br>
+                "Педагогическое образование: Учитель основ безопасности жизнедеятельности"</p>
             <p>ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе <br>
                 "Основы безопасности и защиты Родины"</p>
         </div>
