--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
 
                 <a href="vneurochnaya.html" class="access-card">
                     <div class="access-icon">⚡</div>
-                    <div class="access-title">Внеурочная деятельность</div>
+                    <div class="access-title">Активности</div>
                     <p class="access-description">Кружки, учебные сборы, военно-патриотические мероприятия</p>
                 </a>
 
@@ -683,7 +683,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 Email: <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 Email: <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                     <li>📞 Консультации: по согласованию</li>
                 </ul>
