--- a/about.html
+++ b/about.html
@@ -397,7 +397,7 @@
             <h2>📚 Переподготовка и повышение квалификации</h2>
             <p>ООО "Импульс", 2023 год, профессиональная переподготовка по программе<br>
                 "Педагогическое образование: Учитель основ безопасности жизнедеятельности"</p>
-            <p>ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе <br>
+            <p style="margin-top: 1rem;">ГБОУ ДПО "Нижегородский институт развития образования", 2025 год, повышение квалификации по программе <br>
                 "Основы безопасности и защиты Родины"</p>
         </div>
 
@@ -405,7 +405,7 @@
             <h2>🏆 Награды и достижения</h2>
             <p>Благодарственное письмо УЦПВ ПФО "Гвардеец", 2023 год<br>
             "За активное участие в проведении учебных сборов по основам военной службы"</p>
-            <p>Почетная грамота Управления образования и молодежной политики администрации Лысковского муниципального округа<br>
+            <p style="margin-top: 1rem;">Почетная грамота Управления образования и молодежной политики администрации Лысковского муниципального округа<br>
             "За профессионализм, добросовестный труд и умелую организацию образовательного процесса"</p>
         </div>
     </main>
