--- a/contacts.html
+++ b/contacts.html
@@ -81,7 +81,7 @@
                 <div class="contact-icon">📧</div>
                 <div class="contact-title">Email</div>
                 <div class="contact-info">
-                    <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a>
+                    <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a>
                 </div>
             </div>
 
@@ -89,9 +89,11 @@
                 <div class="contact-icon">📍</div>
                 <div class="contact-title">Адрес</div>
                 <div class="contact-info">
+                    <a href="https://yandex.ru/maps/?text=Нижегородская область, г. Лысково, ул. Нестерова, д. 2А" target="_blank" style="color: inherit; text-decoration: none;"> 
                     МБОУ СШ № 2<br>
-                    г. Лысково<br>
+                    г. Лысково, ул.Нестерова, д.2А<br>
                     Нижегородская область
+                    </a>    
                 </div>
             </div>
 
@@ -108,15 +110,20 @@
 
         <div class="card">
             <h2>📝 Форма обратной связи</h2>
-            <p>Если у вас есть вопросы или предложения, напишите мне на email: <a href="mailto:demin.obzr@school2-lyskovo.ru" style="color: var(--color-primary); font-weight: 600;">demin.obzr@school2-lyskovo.ru</a></p>
+            <p>Если у вас есть вопросы или предложения, напишите мне на email: <a href="mailto:demin.obzr@school2-lyskovo.ru" style="color: var(--color-primary); font-weight: 600;">ademin1977@vk.com</a></p>
             <p style="margin-top: 1rem;"><strong>Время ответа:</strong> В течение 1-2 рабочих дней</p>
         </div>
 
         <div class="card">
             <h2>🏫 О школе</h2>
             <p><strong>МБОУ СШ № 2 г. Лысково</strong></p>
-            <p>Муниципальное бюджетное общеобразовательное учреждение "Средняя школа № 2" города Лысково Нижегородской области</p>
-            <p style="margin-top: 1rem;"><em>Адрес и телефон школы уточните на официальном сайте школы или в администрации.</em></p>
+            <p>Муниципальное бюджетное общеобразовательное учреждение "Средняя школа № 2 города Лысково"</p>
+             <p style="margin-top: 1rem;">
+        <strong>Адрес:</strong> Нижегородская область, г. Лысково, ул. Нестерова, д. 2А<br>
+        <strong>Телефон:</strong> <a href="tel:+78314954449">+7(831)4954449</a><br>
+        <strong>Email:</strong> <a href="mailto:2_lsk@mail.52gov.ru">2_lsk@mail.52gov.ru</a><br>
+        <strong>Сайт школы:</strong> <a href="https://school2lsk.gosuslugi.ru" target="_blank">https://school2lsk.gosuslugi.ru/</a>
+    </p>
         </div>
 
         <div class="card">
@@ -146,7 +153,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                 </ul>
             </div>
