--- a/index.html
+++ b/index.html
@@ -712,7 +712,8 @@
 
         <div class="footer-bottom">
             <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI). Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
+            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI).<br> 
+                Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
         </div>
     </footer>
 
