--- a/parents.html
+++ b/parents.html
@@ -77,9 +77,9 @@
             <p>С 1 сентября 2024 года предмет ОБЖ заменён на <strong>ОБЗР (Основы безопасности и защиты Родины)</strong>. Это обновлённый курс, который включает не только традиционные темы безопасности, но и элементы военной подготовки.</p>
             <h3>Что изучают дети:</h3>
             <ul>
-                <li>Безопасность в быту, на транспорте, в природе</li>
+                <li>Безопасность в быту, на транспорте, на природе</li>
                 <li>Первая помощь и медицинские знания</li>
-                <li>Военная подготовка (НОВОЕ с 2024 года)</li>
+                <li>Военная подготовка</li>
                 <li>Информационная безопасность</li>
                 <li>Противодействие терроризму и экстремизму</li>
             </ul>
@@ -87,13 +87,14 @@
 
         <div class="card">
             <h2>🏕️ Учебно-полевые сборы</h2>
-            <h3>Для 10 класса (юноши — обязательно, девушки — по желанию):</h3>
+            <h3>Для 10 класса (юноши):</h3>
             <ul>
                 <li><strong>Продолжительность:</strong> 5 дней (40 учебных часов)</li>
-                <li><strong>Когда:</strong> Май-июнь (точные даты сообщаются заранее)</li>
-                <li><strong>Где:</strong> На базе воинской части или учебного центра</li>
+                <li><strong>Когда:</strong> В течение учебного года (точные даты сообщаются заранее)</li>
+                <li><strong>Где:</strong> На базе учебно-методического центра военно-патриотического воспитания "Гвардеец"<br>
+                    Нижегородская область, Балахнинский район, д. Истомино. Тел.: 8(83144)6-92-20</li>
             </ul>
-            <h3>Для 8 класса (все учащиеся):</h3>
+            <h3>Для 8 класса (юноши):</h3>
             <ul>
                 <li><strong>Продолжительность:</strong> 3 дня</li>
                 <li><strong>Программа:</strong> Основы строевой подготовки, ориентирование, первая помощь</li>
@@ -113,7 +114,7 @@
             <h2>📞 График консультаций</h2>
             <p>Вы можете обратиться ко мне по любым вопросам, связанным с обучением вашего ребёнка:</p>
             <ul>
-                <li><strong>Email:</strong> <a href="mailto:demin.obzr@school2-lyskovo.ru" style="color: var(--color-primary);">demin.obzr@school2-lyskovo.ru</a></li>
+                <li><strong>Email:</strong> <a href="mailto:demin.obzr@school2-lyskovo.ru" style="color: var(--color-primary);">ademin1977@vk.com</a></li>
                 <li><strong>Консультации:</strong> По предварительной договорённости (напишите на email)</li>
                 <li><strong>Родительские собрания:</strong> По расписанию школы</li>
             </ul>
@@ -124,7 +125,7 @@
             
             <div class="faq-item">
                 <div class="faq-question">Обязательны ли учебные сборы для девушек?</div>
-                <div>Для девушек 10 класса сборы проводятся по желанию. Для юношей — обязательны.</div>
+                <div>Сборы обязательны только для юношей.</div>
             </div>
 
             <div class="faq-item">
@@ -144,7 +145,7 @@
 
             <div class="faq-item">
                 <div class="faq-question">Как связаться с преподавателем?</div>
-                <div>Через email: demin.obzr@school2-lyskovo.ru или через классного руководителя.</div>
+                <div>Через email: ademin1977@vk.com или через классного руководителя.</div>
             </div>
         </div>
 
@@ -164,7 +165,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                 </ul>
             </div>
