--- a/portfolio.html
+++ b/portfolio.html
@@ -325,7 +325,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                 </ul>
             </div>
