--- a/metodika.html
+++ b/metodika.html
@@ -433,7 +433,7 @@
             <h3 style="margin-bottom: 1rem;">💬 Обмен опытом</h3>
             <p>Если вы — коллега-педагог и хотите получить материалы или поделиться своими наработками, напишите мне на email:</p>
             <p style="margin-top: 1rem; font-size: 1.2rem; font-weight: 600;">
-                <a href="mailto:demin.obzr@school2-lyskovo.ru" style="color: white; text-decoration: underline;">demin.obzr@school2-lyskovo.ru</a>
+                <a href="mailto:demin.obzr@school2-lyskovo.ru" style="color: white; text-decoration: underline;">ademin1977@vk.com</a>
             </p>
         </div>
     </main>
@@ -443,7 +443,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                 </ul>
             </div>
