--- a/ai-projects.html
+++ b/ai-projects.html
@@ -90,7 +90,7 @@
         
         <div class="page-intro">
             <p><strong>Искусственный интеллект как инструмент современного образования</strong></p>
-            <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Suno AI, DALL-E и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
+            <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Suno AI, Perplexity и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
         </div>
 
         <section class="section">
@@ -381,7 +381,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                 </ul>
             </div>
