--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -90,7 +90,7 @@
             <h2>🎖️ Юнармия</h2>
             <div class="card">
                 <h3>Всероссийское детско-юношеское военно-патриотическое общественное движение</h3>
-                <p>В нашей школе действует отряд Юнармии, который объединяет учащихся 8-11 классов, интересующихся военной историей, спортом и патриотическим воспитанием.</p>
+                <p>В нашей школе действует отряд Юнармии, который объединяет учащихся 5-9 классов, интересующихся военной историей, спортом и патриотическим воспитанием.</p>
                 <h3 style="margin-top: 1.5rem;">Направления работы:</h3>
                 <ul>
                     <li>Строевая подготовка и дисциплина</li>
@@ -152,7 +152,7 @@
                     <li>Тестирование в условиях, приближенных к олимпиадным</li>
                 </ul>
 
-                <h3 style="margin-top: 1.5rem;">Результаты 2024-2025 учебного года:</h3>
+                <h3 style="margin-top: 1.5rem;">Результаты 2025-2026 учебного года:</h3>
                 <div style="background: white; padding: 1.5rem; border-radius: 8px; margin-top: 1rem;">
                     <p><strong>Школьный этап:</strong></p>
                     <ul>
@@ -164,9 +164,18 @@
                         <li>Участников: <em>[количество]</em></li>
                         <li>Призовые места: <em>[ФИО обезличенно, класс, место]</em></li>
                     </ul>
-                    <p style="margin-top: 1rem;"><strong>Региональный этап:</strong></p>
+
+                <h3 style="margin-top: 1.5rem;">Результаты прошлых лет:</h3>
+                <div style="background: white; padding: 1.5rem; border-radius: 8px; margin-top: 1rem;">
+                    <p><strong>Школьный этап:</strong></p>
                     <ul>
-                        <li><em>Укажите результаты, если учащиеся прошли на региональный уровень</em></li>
+                        <li>Участников: <em>[количество]</em></li>
+                        <li>Победителей и призёров: <em>[количество]</em></li>
+                    </ul>
+                    <p style="margin-top: 1rem;"><strong>Муниципальный этап:</strong></p>
+                    <ul>
+                        <li>Участников: <em>[количество]</em></li>
+                        <li>Призовые места: <em>[ФИО обезличенно, класс, место]</em></li>
                     </ul>
                 </div>
             </div>
@@ -175,7 +184,7 @@
         <section class="section">
             <h2>🏕️ Учебно-полевые сборы</h2>
             <div class="card">
-                <h3>Программа учебных сборов 2024-2025</h3>
+                <h3>Программа учебных сборов 2025-2026</h3>
                 <p><strong>Сборы для 10 класса (5 дней):</strong></p>
                 <ul>
                     <li>Строевая подготовка</li>
@@ -244,7 +253,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">demin.obzr@school2-lyskovo.ru</a></li>
+                    <li>📧 <a href="mailto:demin.obzr@school2-lyskovo.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                 </ul>
             </div>
