--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -86,13 +86,16 @@
     <main>
         <h1 class="page-title">Активности</h1>
 
-        <section class="section">
-            <h2>🎖️ Юнармия</h2>
-            <div class="card">
-                <h3>Всероссийское детско-юношеское военно-патриотическое общественное движение</h3>
-                <p>В нашей школе действует отряд Юнармии, который объединяет учащихся 5-9 классов, интересующихся военной историей, спортом и патриотическим воспитанием.</p>
-                <h3 style="margin-top: 1.5rem;">Направления работы:</h3>
-                <ul>
+       <section class="section">
+    <h2>
+        <img src="images/logo-yunarmiya.png" alt="Юнармия" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 0.5rem;">
+        Юнармия
+    </h2>
+    <div class="card">
+        <h3>Всероссийское детско-юношеское военно-патриотическое общественное движение</h3>
+        <p>В нашей школе действует отряд Юнармии, который объединяет учащихся 5-9 классов, интересующихся военной историей, спортом и патриотическим воспитанием.</p>
+        <h3 style="margin-top: 1.5rem;">Направления работы:</h3>
+        <ul> 
                     <li>Строевая подготовка и дисциплина</li>
                     <li>Изучение истории Вооружённых Сил РФ</li>
                     <li>Участие в военно-патриотических мероприятиях и акциях</li>
