--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -88,7 +88,7 @@
 
        <section class="section">
     <h2>
-        <img src="images/logo-yunarmiya.png" alt="Юнармия" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 0.5rem;">
+        <img src="logo-yunarmiya.png" alt="Юнармия" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 0.5rem;">
         Юнармия
     </h2>
     <div class="card">
