--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -87,7 +87,7 @@
         <h1 class="page-title">Активности</h1>
 
      <section class="section">
-            <h2>🎖️ Юнармия</h2>
+            <h2><img src="images/logo-yunarmiya.png.png" alt="Юнармия" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 0.5rem;"></h2>
             <div class="card">
                 <h3>Всероссийское детско-юношеское военно-патриотическое общественное движение</h3>
                 <p>В нашей школе действует отряд Юнармии, который объединяет учащихся 5-9 классов, интересующихся военной историей, спортом и патриотическим воспитанием.</p>
