--- a/contacts.html
+++ b/contacts.html
@@ -48,6 +48,7 @@
         <div class="header-top">
             <div class="header-content">
                 <div class="header-title">
+                   <img src="images/emblem-obzr.png" alt="Эмблема ОБЗР" style="width: 70px; height: 70px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 2px 8px rgba(0,0,0,0.2));"> 
                     <img src="photo.jpg" alt="Дёмин Александр Юрьевич" class="header-photo">
                     <div>
                         <h1>Дёмин Александр Юрьевич</h1>
