--- a/parents.html
+++ b/parents.html
@@ -44,7 +44,7 @@
         <div class="header-top">
             <div class="header-content">
                 <div class="header-title">
-                    <img src="photo.jpg" alt="Дёмин Александр Юрьевич" class="header-photo">
+                   <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.15)'" onmouseout="this.style.transform='scale(1)'"> 
                     <div>
                         <h1>Дёмин Александр Юрьевич</h1>
                         <p class="header-subtitle">Преподаватель-организатор ОБЗР | МБОУ СШ № 2 г. Лысково</p>
