--- a/index.html
+++ b/index.html
@@ -507,12 +507,21 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="header-top">
-            <div class="header-content">
-                <div class="header-title">
-                    <div id="emblem-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9999; justify-content: center; align-items: center;" onclick="closeLightbox()">
+      <div class="header-title">
+    <!-- Кликабельная эмблема -->
+    <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" onclick="openLightbox()" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 3px 10px rgba(0,0,0,0.25)); cursor: pointer; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    
+    <img src="images/photo.jpg" alt="Дёмин Александр Юрьевич" class="header-photo">
+    <div>
+        <h1>Дёмин Александр Юрьевич</h1>
+        <p class="header-subtitle">Преподаватель-организатор ОБЗР | МБОУ СШ № 2 г. Лысково</p>
+    </div>
+</div>
+
+<!-- Lightbox (СНАРУЖИ header-title!) -->
+<div id="emblem-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9999; justify-content: center; align-items: center;" onclick="closeLightbox()">
     <span style="position: absolute; top: 20px; right: 40px; color: white; font-size: 40px; font-weight: bold; cursor: pointer; transition: color 0.3s;" onmouseover="this.style.color='#E53935'" onmouseout="this.style.color='white'">&times;</span>
-    <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 90%; max-height: 90%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
+    <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 80%; max-height: 80%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
 </div>
 
 <style>
@@ -531,15 +540,14 @@
 <script>
 function openLightbox() {
     document.getElementById('emblem-lightbox').style.display = 'flex';
-    document.body.style.overflow = 'hidden'; // Блокируем скролл
+    document.body.style.overflow = 'hidden';
 }
 
 function closeLightbox() {
     document.getElementById('emblem-lightbox').style.display = 'none';
-    document.body.style.overflow = 'auto'; // Возвращаем скролл
+    document.body.style.overflow = 'auto';
 }
 
-// Закрытие по клавише Escape
 document.addEventListener('keydown', function(event) {
     if (event.key === 'Escape') {
         closeLightbox();
