--- a/contacts.html
+++ b/contacts.html
@@ -124,17 +124,17 @@ document.addEventListener('keydown', function(event) {
                 </div>
             </div>
 
-            <div class="contact-card">
-                <div class="contact-icon">📍</div>
-                <div class="contact-title">Адрес</div>
-                <div class="contact-info">
-                    <a href="https://yandex.ru/maps/?text=Нижегородская область, г. Лысково, ул. Нестерова, д. 2А" target="_blank" style="color: inherit; text-decoration: none;"> 
-                    МБОУ СШ № 2<br>
-                    г. Лысково, ул.Нестерова, д.2А<br>
-                    Нижегородская область
-                    </a>    
-                </div>
-            </div>
+           <div class="contact-card">
+    <div class="contact-icon">📍</div>
+    <div class="contact-title">Адрес</div>
+    <div class="contact-info">
+        <a href="https://yandex.ru/maps/?ll=45.031589,56.017948&z=17&pt=45.031589,56.017948,pm2rdm" target="_blank" style="color: inherit; text-decoration: none;"> 
+            МБОУ СШ № 2<br>
+            г. Лысково, ул. Нестерова, д. 2А<br>
+            Нижегородская область
+        </a>    
+    </div>
+</div>
 
             <div class="contact-card">
                 <div class="contact-icon">🕒</div>
