--- a/ai-projects.html
+++ b/ai-projects.html
@@ -136,7 +136,8 @@ document.addEventListener('keydown', function(event) {
             <h2>📚 Для учеников — Творческие проекты</h2>
             <div class="card">
                 <h3>Литературные проекты</h3>
-                <p>Учащиеся создают стихи, рассказы и сценарии на темы безопасности, военной подготовки и патриотизма с помощью ИИ.</p>
+                <p>Книга о безопасном взаимодействии учащихся с цифровой средой.<p><p>
+                <p>Также здесь будут размещаться стихи, рассказы и сценарии на темы безопасности, военной подготовки и патриотизма, созданные с помощью ИИ.</p>
                 
                 <div class="content-block">
                     <h4>Стихотворение "Безопасность — наш выбор"</h4>
