--- a/ai-projects.html
+++ b/ai-projects.html
@@ -129,7 +129,7 @@ document.addEventListener('keydown', function(event) {
         
         <div class="page-intro">
             <p><strong>Искусственный интеллект как инструмент современного образования</strong></p>
-            <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Suno AI, Perplexity и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
+            <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Midjourney, Suno AI, Perplexity и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
         </div>
 
         <section class="section">
