--- a/metodika.html
+++ b/metodika.html
@@ -324,7 +324,7 @@ document.addEventListener('keydown', function(event) {
                         <span class="doc-date">2025-2026 уч. год</span>
                     </div>
                 </div>
-                <a href="documents/rp-obzr-10-11.pdf" target="_blank" class="doc-download-btn">
+                <a href="documents/rp-obzr-10-11.pdf.pdf" target="_blank" class="doc-download-btn">
                     ⬇️ Скачать
                 </a>
             </div>
