--- a/ai-projects.html
+++ b/ai-projects.html
@@ -525,12 +525,6 @@ document.addEventListener('keydown', function(event) {
 </head>
 <body>
 
-    <!-- Заголовок страницы -->
-    <div class="page-header">
-        <h1>🤖 ИИ в образовании</h1>
-        <p>Использование искусственного интеллекта в преподавании ОБЗР и творческих проектах учащихся</p>
-    </div>
-
     <!-- СЕКЦИЯ: Творческие проекты -->
     <section class="content-section">
         <!-- Кликабельный заголовок -->
@@ -551,7 +545,7 @@ document.addEventListener('keydown', function(event) {
         <div class="accordion-content" id="creative-content">
             <div class="accordion-inner">
                 <p class="accordion-description">
-                    Творческие работы учащихся, созданные с использованием ИИ-инструментов: стихи, рассказы, песни, иллюстрации и инфографика на темы безопасности, военной подготовки и патриотизма.
+                    Творческие работы, созданные с использованием ИИ-инструментов: стихи, рассказы, песни, иллюстрации и инфографика на темы безопасности, военной подготовки и патриотизма.
                 </p>
 
                 <div class="modules-grid">
@@ -612,20 +606,6 @@ document.addEventListener('keydown', function(event) {
                                     </div>
                                 </div>
 
-                                <!-- Проект 3 -->
-                                <div class="content-block">
-                                    <h4>Электронная книга "Цифровая безопасность для подростков"</h4>
-                                    <p style="line-height: 1.8;">
-                                        Совместный проект учащихся 10-11 классов: книга о безопасном взаимодействии с цифровой средой, защите персональных данных и противодействии кибербуллингу.
-                                    </p>
-                                    <div class="author-meta">
-                                        <strong>Авторы:</strong> Коллектив учащихся 10-11 классов<br>
-                                        <strong>Инструменты:</strong> Claude AI (тексты) + Canva (дизайн)<br>
-                                        <strong>Дата:</strong> Ноябрь 2025<br>
-                                        <strong>Скачать:</strong> <em>[Ссылка на PDF, 50 страниц]</em>
-                                    </div>
-                                </div>
-
                                 <p class="placeholder-text">💡 Добавьте литературные работы ваших учеников</p>
                             </div>
                         </div>
@@ -648,7 +628,7 @@ document.addEventListener('keydown', function(event) {
                         <div class="module-content" id="music-content">
                             <div class="module-inner">
                                 <p class="project-description">
-                                    Создание песен о героях, безопасности и патриотических темах с помощью ИИ-генераторов музыки.
+                                    Песни о героях, безопасности и патриотических темах, созданные с помощью ИИ-генераторов музыки.
                                 </p>
 
                                 <!-- Музыкальный проект 1 -->
@@ -673,20 +653,6 @@ document.addEventListener('keydown', function(event) {
                                         <strong>Инструменты:</strong> ChatGPT (текст) + Suno AI (мелодия)<br>
                                         <strong>Дата:</strong> Сентябрь 2025<br>
                                         <strong>Аудио:</strong> <em>[Ссылка на MP3-файл]</em>
-                                    </div>
-                                </div>
-
-                                <!-- Музыкальный проект 2 -->
-                                <div class="content-block">
-                                    <h4>Гимн учебных сборов "Готов к защите Родины"</h4>
-                                    <p style="line-height: 1.8;">
-                                        <strong>Описание:</strong> Торжественная песня для открытия учебно-полевых сборов. Марш в военном стиле.<br><br>
-                                        <em>[Полный текст]</em>
-                                    </p>
-                                    <div class="author-meta">
-                                        <strong>Автор:</strong> Дмитрий Л., 10 класс<br>
-                                        <strong>Инструменты:</strong> Claude AI (текст) + Udio (музыка)<br>
-                                        <strong>Дата:</strong> Апрель 2025
                                     </div>
                                 </div>
 
@@ -724,18 +690,6 @@ document.addEventListener('keydown', function(event) {
                                         <strong>Автор:</strong> Иван К., 9 класс<br>
                                         <strong>Инструмент:</strong> DALL-E 3 через Bing Image Creator<br>
                                         <strong>Дата:</strong> Ноябрь 2025
-                                    </div>
-                                </div>
-
-                                <!-- Визуальный проект 2 -->
-                                <div class="content-block">
-                                    <h4>Плакат "Защитники Отечества: вчера, сегодня, завтра"</h4>
-                                    <p><em>[Изображение плаката]</em></p>
-                                    <p style="margin-top: 1rem;">Описание: Коллаж с изображениями защитников Родины разных эпох</p>
-                                    <div class="author-meta">
-                                        <strong>Автор:</strong> Елена Н., 10 класс<br>
-                                        <strong>Инструмент:</strong> Kandinsky 3.0<br>
-                                        <strong>Дата:</strong> Февраль 2025
                                     </div>
                                 </div>
 
