--- a/ai-projects.html
+++ b/ai-projects.html
@@ -1922,9 +1922,11 @@ document.addEventListener('keydown', function(event) {
                 <h3>📖 Полезные ресурсы по ИИ в образовании</h3>
                 <ul style="line-height: 2;">
                     <li><strong>Claude AI:</strong> <a href="https://claude.ai" target="_blank" style="color: var(--color-primary);">claude.ai</a> — генерация текстов, конспектов, тестов</li>
+                    <li><strong>Perplexity:</strong> <a href="https://perplexity.ai" target="_blank" style="color: var(--color-primary);">perplexity.ai</a> — глубокие исследования в Интернете</li>
                     <li><strong>ChatGPT:</strong> <a href="https://chat.openai.com" target="_blank" style="color: var(--color-primary);">chat.openai.com</a> — альтернативный ИИ-помощник</li>
                     <li><strong>Gamma App:</strong> <a href="https://gamma.app" target="_blank" style="color: var(--color-primary);">gamma.app</a> — создание презентаций по тексту</li>
-                    <li><strong>DALL-E через Bing:</strong> <a href="https://www.bing.com/images/create" target="_blank" style="color: var(--color-primary);">bing.com/images/create</a> — генерация изображений</li>
+                    <li><strong>Midjourney:</strong> <a href="https://midjourney.com" target="_blank" style="color: var(--color-primary);">midjourney.com</a> — генерация изображений</li>
+                    <li><strong>Suno:</strong> <a href="https://suno.com" target="_blank" style="color: var(--color-primary);">suno.com</a> — генерация музыки</li>
                     <li><strong>Kandinsky 3.0:</strong> <a href="https://fusionbrain.ai" target="_blank" style="color: var(--color-primary);">fusionbrain.ai</a> — российский ИИ для изображений</li>
                 </ul>
             </div>
