--- a/ai-projects.html
+++ b/ai-projects.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ИИ в образовании - материалы, созданные с использованием искусственного интеллекта">
     <title>ИИ в образовании | Дёмин А.Ю.</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         :root {
             --color-primary: #003D7A;
             --color-primary-hover: #00518A;
@@ -19,6 +25,7 @@
             --color-text-secondary: #7F8C8D;
             --color-border: #E0E6ED;
         }
+        
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6; color: var(--color-text-primary); }
         header { background-color: var(--color-primary); color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
         .header-top { background-color: var(--color-primary-active); padding: 0.5rem 0; }
