--- a/ai-projects.html
+++ b/ai-projects.html
@@ -100,8 +100,7 @@ document.addEventListener('keydown', function(event) {
     }
 });
 </script>
-                    <div>
-
+                   <div>
                         <h1>Дёмин Александр Юрьевич</h1>
                         <p class="header-subtitle">Преподаватель-организатор ОБЗР | МБОУ СШ № 2 г. Лысково</p>
                     </div>
@@ -126,12 +125,12 @@ document.addEventListener('keydown', function(event) {
     </header>
 
     <main>
-        <h1 class="page-title">🤖 ИИ в образовании</h1>
+        <h1 class="page-title">🤖 ИИ в образовании ОБЗР</h1>
         
         <div class="page-intro">
             <p><strong>Искусственный интеллект как инструмент современного образования</strong></p>
-            <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Midjourney, Suno AI, Perplexity и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
-        </div>
+            <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Suno AI, DALL-E и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
+        </div>    
 
        <!DOCTYPE html>
 <html lang="ru">
