--- a/ai-projects.html
+++ b/ai-projects.html
@@ -20,20 +20,23 @@
             --color-border: #E0E6ED;
         }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6; color: var(--color-text-primary); }
-       header {
+header {
     background-color: var(--color-primary);
     color: white;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;       
     z-index: 1000;
     width: 100vw; 
-    left: 0;         
+    margin: 0;
+    padding: 0;              
 }
 .header-top {
     background-color: var(--color-primary-active);
     padding: 0.5rem 0;
     width: 100vw;
+    margin: 0;
     left: 0;
     position: relative;
 }
@@ -50,9 +53,12 @@
         .header-title h1 { font-size: 1.5rem; font-weight: 700; }
         .header-subtitle { font-size: 0.9rem; opacity: 0.9; }
         .mobile-menu-toggle { display: none; background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer; }
-     nav {
+nav {
     background-color: var(--color-primary);
-    width: 100%; 
+    width: 100vw;
+    margin: 0;
+    left: 0; 
+    position: relative;
 }
       .nav-container {
     max-width: 1200px;
