--- a/ai-projects.html
+++ b/ai-projects.html
@@ -61,7 +61,7 @@ nav {
     left: 0; 
     position: relative;
 }
-      .nav-container {
+.nav-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 1rem;
@@ -71,7 +71,14 @@ nav {
         .nav-menu a:hover { background-color: var(--color-primary-hover); }
         .nav-menu a.active { background-color: var(--color-danger); }
         main { max-width: 1200px; margin: 0 auto; padding: 3rem 1rem; }
-        .page-title { font-size: 2.5rem; color: var(--color-primary); margin-bottom: 1rem; padding-bottom: 1rem; border-bottom: 4px solid var(--color-danger); }
+.page-title {
+    font-size: 2.5rem;
+    color: var(--color-primary);
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 4px solid var(--color-danger);
+    text-align: center; /* или то, что нужно по стилю */
+}
         .page-intro { font-size: 1.1rem; margin-bottom: 2rem; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 1.5rem; border-radius: 8px; border-left: 4px solid var(--color-primary); }
         .section { margin-bottom: 3rem; }
         .section h2 { font-size: 2rem; color: var(--color-primary); margin-bottom: 1.5rem; }
@@ -81,12 +88,16 @@ nav {
         .content-block h4 { color: var(--color-primary); margin-bottom: 1rem; }
         .author-meta { margin-top: 1rem; font-size: 0.9rem; color: var(--color-text-secondary); padding-top: 1rem; border-top: 1px solid var(--color-border); }
         .warning-box { margin-top: 1.5rem; padding: 1rem; background: #FFF3CD; border-left: 4px solid var(--color-warning); border-radius: 4px; }
-       footer {
+footer {
     background-color: var(--color-primary);
     color: white;
-    padding: 2rem 0; 
-    margin-top: 4rem;
-    width: 100%; 
+    width: 100vw
+    margin: 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 1000;
+    padding: 2rem 0;  
 }
       .footer-content {
     max-width: 1200px; 
