--- a/ai-projects.html
+++ b/ai-projects.html
@@ -91,15 +91,15 @@ nav {
 footer {
     background-color: var(--color-primary);
     color: white;
-    width: 100vw
+    width: 100%
+    padding: 2rem 1rem; 
+    margin-top: 4rem;     
     margin: 0;
-    position: fixed;
     left: 0;
     bottom: 0;
     z-index: 1000;
-    padding: 2rem 0;  
 }
-      .footer-content {
+ .footer-content {
     max-width: 1200px; 
     margin: 0 auto;
     padding: 0 1rem; 
