--- a/ai-projects.html
+++ b/ai-projects.html
@@ -91,9 +91,9 @@ nav {
 footer {
     background-color: var(--color-primary);
     color: white;
-    width: 100%
-    padding: 2rem 1rem; 
-    margin-top: 4rem;     
+    width: 100vw
+    padding: 2rem 0; 
+    margin-top: auto;     
     margin: 0;
     left: 0;
     bottom: 0;
