--- a/ai-projects.html
+++ b/ai-projects.html
@@ -211,7 +211,7 @@ document.addEventListener('keydown', function(event) {
     </header>
 
     <main>
-        <h1 class="page-title">🤖 ИИ в образовании ОБЗР</h1>
+        <h1 class="page-title">🤖 ИИ в образовании</h1>
         
         <div class="page-intro">
             <p><strong>Искусственный интеллект как инструмент современного образования</strong></p>
