--- a/ai-projects.html
+++ b/ai-projects.html
@@ -211,10 +211,10 @@ document.addEventListener('keydown', function(event) {
     </header>
 
     <main>
-        <h1 class="page-title">🤖 ИИ в образовании</h1>
+        <h1 class="page-title">🤖 Искусственный интеллект в образовании</h1>
         
         <div class="page-intro">
-            <p><strong>Искусственный интеллект как инструмент современного образования</strong></p>
+            <p><strong>Нейросети как инструмент современного образования</strong></p>
             <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Suno AI, Perplexity и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
         </div>    
 
