--- a/ai-projects.html
+++ b/ai-projects.html
@@ -24,6 +24,13 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+         width: 100% !important;
+    min-width: 100% !important;
+    max-width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box !important;
+    overflow-x: hidden !important;    
         }
         body {
             min-height: 100vh;
@@ -42,6 +49,12 @@
             margin: 0;
             padding: 0;
             left: 0;
+          width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    left: 0 !important;
+    position: relative !important;
+    box-sizing: border-box !important;   
         }
         .header-top {
             background-color: var(--color-primary-active);
@@ -70,6 +83,12 @@
             margin: 0;
             left: 0;
             position: relative;
+           width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    left: 0 !important;
+    position: relative !important;
+    box-sizing: border-box !important;  
         }
         .nav-container {
             max-width: 1200px;
@@ -114,6 +133,12 @@
             left: 0;
             position: relative;
             box-sizing: border-box;
+            width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    left: 0 !important;
+    position: relative !important;
+    box-sizing: border-box !important; 
         }
         .footer-content {
             max-width: 1200px; 
