--- a/ai-projects.html
+++ b/ai-projects.html
@@ -103,6 +103,7 @@
             color: white; 
             font-size: 1.5rem; 
             cursor: pointer; 
+            padding: 0.5rem;
         }
         nav {
             background-color: var(--color-primary);
