--- a/ai-projects.html
+++ b/ai-projects.html
@@ -61,7 +61,7 @@
             padding: 0 !important;
             left: 0 !important;
             position: relative !important;
-            box-sizing: border-box !important;
+            box-sizing: border-box 
         }
         .header-top {
             background-color: var(--color-primary-active);
@@ -117,7 +117,7 @@
             padding: 0 !important;
             left: 0 !important;
             position: relative !important;
-            box-sizing: border-box !important;
+            box-sizing: border-box 
         }
         .nav-container {
             max-width: 1200px;
@@ -185,7 +185,7 @@
     margin: 0 !important;
     left: 0 !important;
     position: relative !important;
-    box-sizing: border-box !important; 
+    box-sizing: border-box 
         }
         .footer-content {
             max-width: 1200px; 
