--- a/ai-projects.html
+++ b/ai-projects.html
@@ -7,6 +7,7 @@
     <title>ИИ в образовании | Дёмин А.Ю.</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
+        *, *::before, *::after { box-sizing: border-box; }
         :root {
             --color-primary: #003D7A;
             --color-primary-hover: #00518A;
