--- a/about.html
+++ b/about.html
@@ -288,9 +288,9 @@
 
         @media (max-width: 768px) {
             .mobile-menu-toggle {
-                display: block;
-            }
-
+                display: block; }
+             .modules-grid { grid-template-columns: 1fr; }
+  }
             .nav-menu {
                 display: none;
                 flex-direction: column;
