--- a/ai-projects.html
+++ b/ai-projects.html
@@ -855,7 +855,7 @@ document.addEventListener('keydown', function(event) {
                                     </p>
                                     <div class="author-meta">
                                         <strong>Автор:</strong> Мария С., 11 класс<br>
-                                        <strong>Инструменты:</strong> ChatGPT (текст) + Suno AI (мелодия)<br>
+                                        <strong>Инструменты:</strong> Claude AI (текст) + Suno AI (мелодия)<br>
                                         <strong>Дата:</strong> Сентябрь 2025<br>
                                         <strong>Аудио:</strong> <em>[Ссылка на MP3-файл]</em>
                                     </div>
