--- a/ai-projects.html
+++ b/ai-projects.html
@@ -2318,11 +2318,11 @@ document.addEventListener('keydown', function(event) {
         // Данные плейлиста (ПУСТЫЕ СЛОТЫ)
     const musicPlaylist = [
         {
-            title: "Трек 1 — будет добавлен позже",
-            subtitle: "Загрузите MP3-файл 01.mp3",
-            filename: "01.mp3",
-            duration: "0:00",
-            isEmpty: true  // Флаг пустого слота
+            title: "Нашей школе 55!",
+            subtitle: "К юбилею школы.mp3",
+            filename: "01-nashey-shcolye-55!.mp3",
+            duration: "4:27",
+            isEmpty: false   // Флаг пустого слота
         },
         {
             title: "Трек 2 — будет добавлен позже",
