--- a/ai-projects.html
+++ b/ai-projects.html
@@ -1004,7 +1004,7 @@ document.addEventListener('keydown', function(event) {
                 
                 <!-- Метаданные плейлиста -->
                 <div class="author-meta" style="margin-top: 15px;">
-                    <strong>Назначение:</strong> Демонстрация возможностей нейросетей при генерации музыкальных произведений"<br>
+                    <strong>Назначение:</strong> Демонстрация возможностей нейросетей при генерации музыкальных произведений<br>
                     <strong>Инструменты:</strong> Perplexity AI, Claude AI, Suno AI<br>
                     <strong>Формат:</strong> MP3<br>
                     <strong>Примечание:</strong> При копировании ссылка на источник обязательна
