--- a/ai-projects.html
+++ b/ai-projects.html
@@ -856,7 +856,7 @@ document.addEventListener('keydown', function(event) {
         <div class="accordion-content" id="creative-content">
             <div class="accordion-inner">
                 <p class="accordion-description">
-                    Творческие работы, созданные с использованием ИИ-инструментов: стихи, рассказы, песни, иллюстрации и инфографика на темы безопасности, военной подготовки и патриотизма.
+                    Творческие работы, созданные с использованием ИИ-инструментов: стихи, рассказы, песни, иллюстрации и инфографика на темы безопасности, военной подготовки, патриотизма и не только.
                 </p>
 
                 <div class="modules-grid">
