--- a/index.html
+++ b/index.html
@@ -900,7 +900,8 @@ document.addEventListener('keydown', function(event) {
                   color: #95a5a6; 
                   font-size: 0.85rem;">
             МБОУ СШ № 2 г. Лысково<br>
-            Преподаватель-организатор ОБЗР
+            Преподаватель-организатор ОБЗР<br>
+            Дёмин Александр Юрьевич
         </p>
     </div>
 </div>
